# i2c_try

./: Cargo.toml  Embed.toml  README.md  openocd.cfg
.cargo/: config
src/: i2c.rs  i2c.rs.old  main.rs
