[package]
authors = ["Clément Bizeau <clement.bizeau4@gmail.com>"]
edition = "2018"
readme = "README.md"
name = "cool"
version = "0.1.0"

[dependencies]
cortex-m = "0.6.3"
cortex-m-rt = "0.6.12"
cortex-m-semihosting = "0.3.5"
cortex-m-rtic = "0.5.5"
panic-semihosting = "0.5.3"

# [dependencies.stm32f3]
# version = "0.11.0"
# features = ["stm32f303", "rt"]

[dependencies.stm32f3xx-hal]
path = "../stm32f3xx-hal"
features = ["stm32f303xc", "rt"]

[dependencies.cast]
default-features = false
version = "0.2.2"

# this lets you use `cargo fix`!
[[bin]]
name = "cool"
test = false
bench = false

[profile.release]
codegen-units = 1 # better optimizations
debug = true # symbols are nice and they don't increase the size on Flash
lto = true # better optimizations
