[package]
authors = ["Clément Bizeau <devclbi@proton.me>"]
edition = "2021"
readme = "README.md"
name = "i2c_try"
version = "0.1.0"

[dependencies]
cortex-m =  {version = "0.7.6", features = ["critical-section-single-core"]}
cortex-m-rt = "0.7.2"
cortex-m-semihosting = "0.5.0"
cortex-m-rtic = "1.1.3"
panic-semihosting = "0.6.0"
rtt-target = { version = "0.3.1", features = ["cortex-m"] }
heapless = "0.7.16"

[dependencies.stm32f3xx-hal]
path = "../stm32f3xx-hal"
features = ["stm32f303xc", "rt"]

[dependencies.cast]
default-features = false
version = "0.3.0"

# this lets you use `cargo fix`!
[[bin]]
name = "i2c_try"
test = false
bench = false

[profile.release]
codegen-units = 1
debug = true
lto = true
